--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
-DIRS += ar binary combine const constructor continue core \
-	ctors edata elfread elfsamp hello \
-	initialize layer linker loader pointer rasm \
-	section setjmp shared stack values weak
+DIRS += ar binary checksym combine const constructor continue core \
+	ctors duplicate edata elfread elfsamp hello \
+	initialize layer ldscript link linker linksamp loader order pointer rasm \
+	section setjmp shared stack tmp values weak
 
 all :
 	for d in ${DIRS}; do cd $$d ; $(MAKE)       ; cd .. ; done
